--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "qs": "^6.9.4",
     "quill": "^1.3.6",
     "screenfull": "^5.1.0",
-    "simplemde": "^1.11.2",
+    "simplemde-w": "^1.11.4",
     "vaw-verify": "^0.1.5",
     "vue": "^2.6.11",
     "vue-router": "^3.4.9",
